Fixes button overlap

--- a/client/stylesheets/tables.import.styl
+++ b/client/stylesheets/tables.import.styl
@@ -27,6 +27,8 @@
     display none
     
 .reports-table
+  h2
+    margin-top 10px
   .reactive-table-columns-dropdown
     float left
     padding 0
